# us-tax-document-extraction-agent

./: .gitignore  FINAL_UPDATE_NOTES.txt  README.md  backend.py  celery_app.py  pyproject.toml  requirements.txt  tasks.py
agents/: audit_agent.py  classifier_agent.py  export_agent.py  extraction_agent.py  tax_document_extraction_agent.py  validation_agent.py  vision_extraction_agent.py
app/: streamlit_app.py
backend/: backend.py  main.py
backend/agents/: confidence_agent.py  human_review_agent.py  tax_document_extraction_agent.py
backend/config/: application.yaml  batch_processing.yaml  confidence.yaml  database.yaml  extraction.yaml  models.yaml  prompts.yaml  validation_rules.yaml
backend/schemas/: audit_schema.py  extraction_result.py
backend/services/: config_loader.py  image_utils.py  llm_service.py  logging_service.py  pdf_service.py  result_merger.py
backend/tests/: test_vision.py
config/: models.yaml  sql_queries.yaml
frontend/: app.jsx  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: DocumentTable.jsx  Icons.jsx  QuickActions.jsx  SettingsPanel.jsx  Sidebar.jsx  Toast.jsx  Topbar.jsx
frontend/src/hooks/: useApi.js  useAppSettings.js
rag/: build_vector_store.py
schemas/: tax_document_schema.py
services/: audit_service.py  database_service.py  document_batch_processor.py  document_chunker.py  excel_service.py  json_parser.py  json_repair_service.py  llm_service.py  vector_service.py
workflows/: extraction_graph.py  nodes.py  state.py
(+7 files in other folders)
