[project]
name = "tax-document-intelligence-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.5.0",
    "chromadb>=1.0.16",
    "docling>=2.97.0",
    "easyocr>=1.7.2",
    "google-generativeai>=0.8.6",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-ollama>=0.3.6",
    "langchain>=0.3.27",
    "langgraph>=0.6.0",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "opencv-python>=4.12.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "prometheus-client>=0.16.0",
    "pybreaker>=0.7.0",
    "pydantic>=2.11",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=4.8.0",
    "streamlit>=1.48.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.26.0",
    "python-multipart>=0.0.6",
    "structlog>=23.1.0",
    "tenacity>=8.2.2",
]
